# fang

./: .editorconfig  CMakeLists.txt  README.md
.github/workflows/: test.yml
src/: Makefile  nuenet.c
src/fang/: memory.c
src/fang/env/: cpu.c  dense.c.inc  env.c
src/fang/env/cpu/: cpu.c  dense.c.inc
src/fang/env/cpu/gemm/: sgemm.c
src/fang/env/cpu/gemm/kernel/: kernel.c
src/fang/env/cpu/gemm/kernel/haswell/: fang_sgemm_6x16_ukernel_asm.c.inc
src/fang/env/gemm/: sgemm.c
src/fang/platform/linux/: memory.c
src/fang/platform/linux/env/: cpu.c  dense.c.inc
src/fang/tensor/: dense.c
src/fang/util/: buffer.c
src/impl/: example.c  platform.c  tensor.c  type.c
src/impl/plat/: cpu.c
src/impl/plat/cpu/: abst.c  cpu.c  work.c
src/include/: compiler.h  fang.h  memory.h  tune.h
src/include/env/: cpu.h
src/include/env/cpu/: avxmath.h  cpu.h  float.h  gemm.h  task.h
src/include/env/cpu/asm/: x86.h
src/include/fang/: config.h  env.h  fang.h  memory.h  platform.h  status.h  tensor.h  type.h
src/include/fang/plat/: cpu.h
src/include/fang/plat/cpu/: abst.h  cpu.h  task.h  work.h
src/include/fang/util/: buffer.h
src/include/platform/: memory.h
src/include/platform/env/: cpu.h
src/include/platform/linux/platform/env/: cpu.h
src/lib/: nuenet.h
test/unit/: environment.c  memory.c
test/unit/tensor/: dense.c
test/unit/tensor/data/: dense.c.inc
test/unit/util/: buffer.c  fang_buffer.c  float.c
